--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -26,7 +26,7 @@ nav:
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: http://github.com/effort
+  github: http://github.com/effortcheep
   # twitter: /
   # facebook: /
   # linkedin: /
