--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -17,7 +17,7 @@ nav:
   home: /
   about: /about
   articles: /archives
-  weekly: /weekly
+  # weekly: /weekly
   tags: /tags
   search: /search
 
