--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -70,8 +70,8 @@ copyright:
 #   - enabled: whether to enable the 404 page (404.html).
 error_404:
   enabled: true
-  title: "404 Page Not Found"
-  description: "The page you are looking for might have been removed, had its name changed, or is temporarily unavailable."
+  title: "页面没有找到。"
+  description: "如果是通过文章链接进入：\n1. 由于本博客作者比较折腾，hexo、jekyll、vuepress 都换过一遍，也没有兼容文章永久链接。\n2. 如果是因为以前的文章永久链接已失效，建议通过关键词在博客本地搜索页进行搜索。\n3. 为你带来不便，十分抱歉。"
 
 
 ##############################################################################
